[package]
name = "learncoin"
version = "0.1.0"
authors = ["Nikola Stojiljkovic <nikolavla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
hex = "0.4.3"
sha2 = "0.9.8"
bincode = "1.3.3"
serde = {version = "1.0.130", features = ["derive"]}
rand = "0.8.4"


[dev-dependencies]
criterion = "0.3"

[lib]
name = "learncoin_lib"
path = "src/lib.rs"

[[bin]]
name = "learncoin"
path = "src/main.rs"

[[bench]]
name = "proof_of_work_benchmark"
harness = false
